# bs2b

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release-pr.yml  release.yml
benches/: process.rs
docs/: ARCHITECTURE.md
scripts/: generate_golden_vectors.sh
src/: lib.rs  streaming.rs
tests/: golden_vectors.rs
